--- a/classwork/04-postal-service-system/web-application/public/styles.css
+++ b/classwork/04-postal-service-system/web-application/public/styles.css
@@ -4,13 +4,18 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1,
+h2,
+ul {
   text-align: center;
 }
 
 main {
   border: 2px solid black;
   border-radius: 5px;
-  padding: 15px;
+  padding: 25px 50px;
   margin: 25px auto;
   max-width: 700px;
 }
@@ -35,4 +40,11 @@ input {
 ul {
   list-style: none;
   padding: 0;
+}
+
+.action-buttons {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
