--- a/lab/01-postal-system/views/index.ejs
+++ b/lab/01-postal-system/views/index.ejs
@@ -2,19 +2,26 @@
 <html lang="en">
   <head>
     <%- include('partials/common-meta') %>
-    <title>Postal System Home</title>
+    <title>Postal System</title>
   </head>
   <body>
     <main>
       <%- include('partials/header') %>
-      <h2>Links</h2>
-      <%- include('partials/links', {
-        links: [
-          {name: "Login", path: "/login"},
-          {name: "Packages", path: "/packages"},
-          {name: "Add Package", path: "/package/add"}
-        ]
-      }) %>
+      <nav>
+        <a href="/package/add">Add Package</a>
+      </nav>
+      <h2>Packages</h2>
+      <ul class="pkg-list">
+        <% packages.forEach(pkg => { %>
+        <li>
+          <% if (pkg.status === 'Delivered') { %>✅ <% } %>
+          <a href="/package/<%= pkg.getTrackingNumber() %>">
+            [<%= pkg.getTrackingNumber() %>] [<%= pkg.getShippingMethod() %>]
+            <%= pkg.getSenderName() %> to <%= pkg.getReceiverName() %>
+          </a>
+        </li>
+        <% }) %>
+      </ul>
     </main>
   </body>
 </html>
