--- a/lab/01-postal-system/views/package.ejs
+++ b/lab/01-postal-system/views/package.ejs
@@ -75,7 +75,7 @@
         </tr>
       </table>
 
-      <h3>Costs</h3>
+      <h3>Cost Breakdown</h3>
       <table class="package-details">
         <tr>
           <th>Weight (kg)</th>
